Improved CSS stylesheets for HTML output templates.

--- a/fiction_dl/Templates/FormatterHTML (Package).html
+++ b/fiction_dl/Templates/FormatterHTML (Package).html
@@ -37,6 +37,16 @@
 
             }
 
+            img
+            {
+
+                margin: 2rem auto;
+                width: 75%;
+
+                display: block;
+
+            }
+
             p
             {
 
