--- a/fiction_dl/Templates/FormatterHTML.html
+++ b/fiction_dl/Templates/FormatterHTML.html
@@ -37,6 +37,16 @@
 
             }
 
+            img
+            {
+
+                margin: 2rem auto;
+                width: 75%;
+
+                display: block;
+
+            }
+
             p
             {
 
